# awesome-free-llm-apis

./: .gitignore  README.md  data.json  tmp_diff.txt  tmp_prev.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  generate-readme.yml  sys-prompt.yml  update-models.yml
docs/plans/: 2026-05-03-merge-and-update-providers.md
free-llm-apis/references/: usages.md
mcp-server/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
mcp-server/.free-llms-mcp/: skills.json
mcp-server/benchmarks/: INTAKE.md  README.md  SAMPLES.md  code-mode.bench.ts  generate-live-samples.ts
mcp-server/dashboard/: app.js  index.html  style.css
mcp-server/docs/: agentic-prompts.md  guide.md  mcp-development.md  setup.md
mcp-server/scripts/: demo-live-tasks.ts  evaluate-routing.ts  model-report.ts  postbuild.js  python-sandbox-runner.py  smoke-test.ts  stress-test-pipeline.ts  test-agentic-memory.ts  test-deep-compression.ts  test-mocked-stress.ts  test-skill-extraction.ts  test-workspace-flow.ts  test-workspace-walker.ts  token-factor-smoke-test.ts  update-models-vision.ts  update-models.ts  update_prompt_json.py  verify-agentic-memory.ts  verify-context-pressure.ts  verify-explicit-steering.ts  verify-header-extraction.ts  verify-keyword-classification.ts
mcp-server/scripts/sandboxes/rust-sandbox-runner/: Cargo.toml
mcp-server/src/: server.ts
mcp-server/tests/: agentic-feedback-loop.test.ts  agentic-intelligence-audit.test.ts  agentic.test.ts  (+52 more)
scripts/: generate-readme.js
(+156 files in other folders)
